--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -7,6 +7,8 @@ body{
   font-family: Arial, Helvetica, sans-serif;
 }
 
+
+
 .board_module{
     display: grid;
     grid-template-columns: repeat(5, 110px);
@@ -47,10 +49,15 @@ body{
 }
 
 .square{
-    
+    text-transform: uppercase;
+    caret-color: white;
+    font-size: 1.5vw;
+    display:flex;
+    justify-content: center;
+    align-items: center;
     width: 100px;
     height: 100px;
-    border: 1px solid rgba(0, 0, 0, 0.48)
+    border: 1px solid rgba(0, 0, 0, 0.68)
 }
 
 
@@ -76,8 +83,94 @@ body{
 
 
 
-.row_module.hover{
-    background: grey;
+.row_module.hover > *{
+    background: rgb(224, 224, 224);
     
+}
+
+.inner_box{
+    display: flex;
+    flex-direction: column;
+    height: 150px;
+    width: 100px;
+    
+    grid-area: 3/3/3/4;
+    gap: 20px;
+}
+
+.rarity{
+    font-size: 2vw;
+    font-weight:500;
+   justify-self: start;
+   align-self: center;
+}
+
+.button{
+    background: #fff;
+  backface-visibility: hidden;
+  border-radius: .375rem;
+  border-style: solid;
+  border-width: .125rem;
+  box-sizing: border-box;
+  color: #212121;
+  cursor: pointer;
+  display: inline-block;
+  font-family: Circular,Helvetica,sans-serif;
+  font-size: 1.125rem;
+  font-weight: 700;
+  letter-spacing: -.01em;
+  line-height: 1.3;
+  padding: .875rem 1.125rem;
+  position: relative;
+  text-align: left;
+  text-decoration: none;
+  transform: translateZ(0) scale(1);
+  transition: transform .2s;
+  user-select: none;
+  -webkit-user-select: none;
+  touch-action: manipulation;
+  
+}
+
+.button:not(:disabled):hover {
+    transform: scale(1.05);
+  }
+  
+  .button:not(:disabled):hover:active {
+    transform: scale(1.05) translateY(.125rem);
+  }
+  
+  .button:focus {
+    outline: 0 solid transparent;
+  }
+  
+  .button:focus:before {
+    content: "";
+    left: calc(-1*.375rem);
+    pointer-events: none;
+    position: absolute;
+    top: calc(-1*.375rem);
+    transition: border-radius;
+    user-select: none;
+  }
+  
+  .button:focus:not(:focus-visible) {
+    outline: 0 solid transparent;
+  }
+  
+  .button:focus:not(:focus-visible):before {
+    border-width: 0;
+  }
+  
+  .button:not(:disabled):active {
+    transform: translateY(.125rem);
+  }
+
+.row_game_noti{
+    grid-area: 2/3/2/3;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-transform: capitalize;
 }
 
