--- a/src/app/components/Modal.css
+++ b/src/app/components/Modal.css
@@ -9,8 +9,8 @@
   }
   
   .modalContainer {
-    width: 20vw;
-    height: 20vh;
+    min-width: 20vw;
+    min-height: 20vh;
     border-radius: 12px;
     background-color: white;
     box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
@@ -67,4 +67,8 @@
   
   #cancelBtn {
     background-color: crimson;
+  }
+
+  #cancelBtn {
+    background-color: 1DA1F2;
   }
