--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -48,8 +48,11 @@ body{
     grid-area: 5/1/6/6;
 }
 
+
+
 .square{
     text-transform: uppercase;
+    font-weight: 600;
     caret-color: white;
     font-size: 1.5vw;
     display:flex;
@@ -88,13 +91,23 @@ body{
     
 }
 
+
+.row_module:hover > *{
+  cursor: pointer;
+  
+}
+.outer_inner{
+  grid-area: 2/2/5/5;
+  display: grid;
+  grid-template-columns: repeat(13, 1fr);
+  grid-template-rows: repeat(13, 1fr);
+}
 .inner_box{
+    grid-area: 8/7/8/7;
     display: flex;
     flex-direction: column;
     height: 150px;
     width: 100px;
-    
-    grid-area: 3/3/3/4;
     gap: 20px;
 }
 
@@ -103,7 +116,19 @@ body{
     font-weight:500;
    justify-self: start;
    align-self: center;
+   
 }
+
+.row_game_noti{
+  min-height: 20px;
+  grid-area: 3/7/3/7;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-transform: capitalize;
+  
+}
+
 
 .button{
     background: #fff;
@@ -166,11 +191,59 @@ body{
     transform: translateY(.125rem);
   }
 
-.row_game_noti{
-    grid-area: 2/3/2/3;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    text-transform: capitalize;
+
+.selected > *{
+ background: #e9f4fd;
 }
 
+.line{
+  width: 3px;
+  height: 3px;
+  background: rgb(240, 42, 42);
+  animation: extendLine 1.5s ease forwards;
+}
+
+.validline{
+  width: 3px;
+  height: 3px;
+  background: rgb(130, 253, 126);
+  animation: extendLine 1.5s ease forwards;
+}
+
+.invalidline{
+  width: 3px;
+  height: 3px;
+  background: rgb(255, 128, 128);
+  animation: extendLine 1.5s ease forwards;
+}
+
+@keyframes extendLine {
+    100%{
+      width: 95%;
+    }
+}
+@keyframes extendLineHeight {
+  100%{
+    height: 95%;
+  }
+}
+
+.top_line{
+  flex-direction: row;
+  grid-area: 1/2/1/14;
+  animation: extendLine 1.5s ease forwards;
+}
+.left_line{
+  grid-area: 2/1/14/1;
+  animation: extendLineHeight 1.5s ease forwards;
+}
+.right_line{
+  grid-area: 2/15/14/15;
+  animation: extendLineHeight 1.5s ease forwards;
+  
+}
+.bottom_line{
+  flex-direction: row;
+  grid-area: 15/2/15/15;
+  animation: extendLine 1.5s ease forwards;
+}
